TheKabal (20 January 2013)
--------------------------------------
Replaced variables in language files with [placeholder] text that is replaced with variables.

TheMightyDude (18 January 2013)
--------------------------------------
Forgot to add in the Event caller for EVENT_TICK, my bad.

TheMightyDude (16 January 2013)
--------------------------------------
Fixed bug in the languages where it would display $base_credits etc.

TheMightyDude (14 January 2013)
--------------------------------------
Fixed the no space between the players name and the news when they are killed.

TheMightyDude (13 January 2013)
--------------------------------------
Fixed PHP Notice: Undefined variable: tempd1 in planet_report_ce.php on line 467
Fixed PHP Notice: Undefined variable: tempd2 in planet_report_ce.php on line 468

TheMightyDude (01 January 2013)
--------------------------------------
Added a feature to erase old out of date Session Data.
Fixed PHP Notice: Undefined index: team_id in planet_report_ce.php on line 301
First part of the Plugin and Event Systems (this may break stuff)
Second part of the Plugin and Event System, Cleanup and [test plugin] (THIS WILL BREAK)
Yep, it broke LOL, should now be fixed and have a working plugin that displays Hello World every 5 seconds only on the Settings Page.
Oh and Happy New Year.

TheMightyDude (24 December 2012)
--------------------------------------
Sanitized ZoneName so that we no longer have loads of \\ in the ZoneName.
Combined Planet amount and Max amount of Colonists along with the planet owner name into a single query, resulting in a performance boost.

TheMightyDude (17 December 2012)
--------------------------------------
Fixed a 10+ year old bug with checking ownership of a sector when building a base.

TheMightyDude (08 December 2012)
--------------------------------------