@@ -1,3 +1,7 @@
+TheMightyDude (26 January 2013)
+--------------------------------------
+Disabled Template System Module due to exploit...
+
 TheKabal (20 January 2013)
 --------------------------------------
 Replaced variables in language files with [placeholder] text that is replaced with variables.
